--- a/conf/application.conf
+++ b/conf/application.conf
@@ -217,4 +217,4 @@ mail.smtp=mock
 
 WEBSOLR_URL=${WEBSOLR_URL}
 
-module.gravatar=${play.path}/modules/gravatar-1.0.2
+module.gravatar=modules/gravatar-1.0.2
