--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,6 @@
 # This is the main configuration file for the application.
 # ~~~~~
-application.name=cd websolr-play
+application.name=websolr-play
 
 # Application mode
 # ~~~~~
