--- a/conf/dependencies.yml
+++ b/conf/dependencies.yml
@@ -2,4 +2,5 @@
 
 require:
     - play -> force 0.7
-    - org.apache.solr -> solr-core 1.4.0
+    - org.codehaus.jackson -> jackson-mapper-asl 1.9.5 
+    - org.codehaus.jackson -> jackson-core-asl 1.9.5 
